# TaskHive

./: CMakeLists.txt  README.md  main.cpp  resourses.qrc
configuration/: log4cpp.xml
databases/mongo/: create.txt  drop.txt
databases/sql/: create.sql  drop.sql  generate.sql  trunc.sql
include/controller/: controller.h
include/controller/Action/: action.h  actionManager.h
include/controller/Command/: command.h
include/controller/Filter/: actionFromUriFilter.h  encodingFilter.h  filter.h  filterFactory.h  securityFilter.h
include/controller/Prepairing/: prepare.h
include/controller/action/: action.h  actionFactory.h  actionManager.h  actionManagerFactory.h  authorizedUserAction.h
include/controller/action/authentication/: logOutAction.h
include/controller/dispatcher/: dispatcher.h
include/dao/: DAO.h  abstractPQXXDao.h  daoFactory.h  genericDao.h  persistException.h
include/dao/connectionPool/: connectionPool.h
include/dao/postgres/: factory.h  postgreUserDao.h  postgresTaskDAO.h  postgresUserDAO.h  postgresdaoFactory.h
include/entity/: Entity.h  Task.h  User.h  identified.h  serializable.h
include/service/: service.h  serviceFactory.h  taskService.h  userService.h
include/view/: mainscreen.h  view.h
include/view/screen/: RegistrationScreen.h  loginscreen.h  screen.h  tasklistscreen.h  taskscreen.h
src/controller/action/: action.cpp  actionFactory.cpp  actionManager.cpp  actionManagerFactory.cpp
src/controller/action/authentication/: logOutAction.cpp
src/controller/dispatcher/: dispatcher.cpp
src/controller/filter/: actionFromUriFiltr.cpp
src/dao/: persistException.cpp
src/dao/connectionPool/: connectionPool.cpp
src/dao/postgres/: factory.cpp  postgresTaskDAO.cpp  postgresUserDAO.cpp
src/entity/: Entity.cpp  Task.cpp  User.cpp
src/service/: serviceFactory.cpp  taskService.cpp  userService.cpp
src/view/: mainscreen.cpp
src/view/screen/: loginscreen.cpp  tasklistscreen.cpp  taskscreen.cpp
test/dao/: PostgresUserDaoTests.cpp
